--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,18 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: '#717171'
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.demo-editor {
+  border: 1px solid rgba(212, 211, 211, 0.548);
+  padding: 8px;
+}
+
+.border {
+  border: 1px solid rgba(212, 211, 211, 0.548);
 }
